lab1/Test/L1-A-7-81.cmm
struct wXRJe8EIOpJ9N3xIm {
  int @mvy6vCAzL1advAi [ 567682066 ] = mFS5TDwuW = 
    opJ1M5X && Lr4VooCGMIU12cYA != HNfZZ5kfJVsf7ye8XxzK 
    + - qx2vy [ wB || ajEXrIq37ar_dnrJFG == bVoVKBqCQMBzXhR2FpV 
    - mT5i * ! ! y ( IMdJyqwB , ztjibFW1MnfCJ5 || pmKZ6lU4l 
    < UcJx49ueqrtlQDuTvHA ( dnUVrUDO7d5xDQ <= ! - ( U 
    * ( Atz && j > L ) / fq2yf ) . m >= ! 1352571266 . 
    m94YT9MLaGGrpR4Jc * kcmXZRqSma . Viaro3MTT9zdYu ) 
    / F ( ) / 1242229916.713186759 . ysgF26aomNFI2IUsZd7S 
    ) ] , dvQcVZEr7m ;
};
struct bTH_4ZIieUx ;
int SeJZvjMi7j 
;
struct Z9zZJb2r utWTTCaehoesDVfR ( float mmhyZmbs 
  ) {
}
int ;
struct {
}CfUjaJkLHqcy01QCJZbY , bOSjJp2dKBB1tU 

;
int ;
int ;
int ;
int ;
int ndLgjzOSwNF3PwXsQF ( ) {
}
int ;
int ;
int he1CU ( ) {
{
    if ( J )     if ( prX )     while ( Dnh3_ANooskt7KkH1u 
      )     mIWxBk_gSpwi ;

else     hCoDasIZoSvqqLAaZ ;

else     if ( FQ8LpzPNAOi2mrrW )     return jBMT6tyzfpvYqLhnZ 
      ;


  }@}
int ;
int :;
int ;
int ;
int UsgQmTDphtK2q_ppX ( ) {
}
int _ABObT4kr8OgZ ( ) '{
}
int ^qiS ( ) {
}
int ;
int TbdHywm4IgmRuz ( int sYo , int p ) {
}
int ;
